<resources>
    <string name="app_name">Phone Pharmacy</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_add">ADD NEW MEDICINE</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="description_text">medicine description</string>
    <string name="name_med">name of medicine</string>
    <string name="select_photo">  select photo  </string>
    <string name="pick_date">set expiration date</string>
    <string name="currentDir">Current Dir</string>
    <string name="fileSize">File Size</string>
    <string name="folder">Folder</string>
    <string name="parentDirectory">Parent Directory</string>
    <string name="openFolder">Open folder</string>
    <string name="selectThis">Select this</string>
    <string name="optionSelection">Option selection</string>
    <string name="take_photo">take a pic</string>
    <string name="dialog_edit">EDIT MEDICINE</string>
    <string name="update_date">Update date of expiration</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="title_activity_list_medicine">ListMedicine</string>
    <string name="title_activity_find_pharmacy_fragment">FindPharmacyFragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="find_pharmacy">Find a Pharmacy</string>
    <string name="find_hospital">Find a Hospital</string>
    <string name="take_med">take medicine</string>
    <string name="dialog_memo">Add memo</string>

    <string name="title_activity_take_medicine">Time to Take Medicine</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="close_alarm">stop alarm</string>
    <string name="no_alarms">No Alarms</string>
    <string name="no_medicines">No Medicines</string>
    <string name="menu_item_new">new</string>
    <string name="menu_item_save">save</string>
    <string name="menu_item_delete">delete</string>
    <string name="menu_item_rate">rate</string>
    <string name="menu_item_website">website</string>
    <string name="menu_item_report">report</string>
    <string name="stop_alarm"> Stop Alarm </string>
    <string name="schedule_med">TIME TO TAKE MEDICINE</string>
    <string name="hint_description">add description</string>
    <string name="hint_medicine_name">med name</string>
    <string name="err_msg_name">please add med name</string>
    <string name="menu_item_1km">1km</string>
    <string name="menu_item_2km">2km</string>
    <string name="menu_item_3km">3km</string>
    <string name="menu_export_data">export database</string>
    <string name="menu_import_data">import database</string>
    <string name="med_name_string">Medicine to take</string>
</resources>
