<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/update_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/update_name_med"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/update_pickDate"
                android:layout_alignParentTop="true"
                android:hint="@string/hint_medicine_name"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/update_layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/update_layout_name">

            <EditText
                android:id="@+id/update_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/update_pickDate"
                android:layout_alignEnd="@+id/update_pickDate"
                android:hint="@string/hint_description" />


        </android.support.design.widget.TextInputLayout>



        <TextView
            android:id="@+id/update_pickDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/update_layout_description"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:fontFamily="sans-serif"
            android:text="@string/pick_date"
            android:textStyle="bold" />

        <Button
            android:id="@+id/update_btn_add_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout2"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/button_background"
            android:shadowColor="#7fa07bfc"
            android:shadowDx="4"
            android:shadowDy="-4"
            android:text="@string/select_photo"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/save_upate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/button_background"
                android:fontFamily="sans-serif"
                android:shadowColor="#7fa07bfc"
                android:shadowDx="4"
                android:shadowDy="-4"
                android:text="@string/save"
                android:textStyle="bold" />
            <Button
                android:id="@+id/cancel_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/button_background"
                android:fontFamily="sans-serif"
                android:shadowColor="#7fa07bfc"
                android:shadowDx="4"
                android:shadowDy="-4"
                android:text="@string/cancel"
                android:textStyle="bold" />
        </LinearLayout>

        <DatePicker
            android:id="@+id/update_expiration_date"
            android:layout_width="wrap_content"
            android:layout_height="162dp"
            android:layout_above="@+id/update_btn_add_photo"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:fontFamily="sans-serif" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>