<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="horizontal"
    android:padding="2dip">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center">

    </RelativeLayout>

    <Button
        android:id="@+id/button_stop_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="47dp"
        android:background="@drawable/button_background"
        android:padding="15dp"
        android:shadowColor="#7fa07bfc"
        android:shadowDx="4"
        android:shadowDy="-4"
        android:text="@string/stop_alarm"
        android:textStyle="bold" />

    <TextClock
        android:id="@+id/time_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/medicine_take"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:keepScreenOn="true"
        android:shadowColor="#7fa07bfc"
        android:shadowDx="4"
        android:shadowDy="-4"
        android:shadowRadius="1"
        android:text="@string/dummy_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/medicine_take"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_stop_alarm"
        android:layout_alignEnd="@+id/time_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="137dp"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#33b5e5"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/scheduleTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/time_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|center"
        android:paddingBottom="20dp"
        android:shadowColor="#7fa07bfc"
        android:shadowDx="4"
        android:shadowDy="-4"
        android:shadowRadius="1"
        android:text="@string/schedule_med"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#33b5e5"
        android:textSize="25sp"
        android:textStyle="bold" />
</RelativeLayout>